PSP/borradores/ae/servlets/world-cup-teams/src/main/java/org/example/worldcupteams/common/errors/PlayerNotFoundException.java
package org.example.worldcupteams.common.errors;

public class PlayerNotFoundException extends RuntimeException {
    public PlayerNotFoundException(String message) {
        super(message);
    }
}

